Add xaringan extras and image callouts

--- a/DigitalStorytelling/TeacherPerspectives.html
+++ b/DigitalStorytelling/TeacherPerspectives.html
@@ -4,7 +4,7 @@
     <title>Teacher Perspectives on a Narrative-Centered Learning Environment to Promote Computationally-Rich Science Learning through Digital Storytelling</title>
     <meta charset="utf-8" />
     <meta name="author" content="Jennifer Houchins, Kimkinyona Cully, Danielle Cadieux Boulden, Kevin Oliver, Andy Smith, James Minogue, Bradford Mott, Rasha Elsayed, Aleata Hubbard Cheuoua, Cathy Ringstaff" />
-    <meta name="date" content="2021-03-23" />
+    <meta name="date" content="2021-03-24" />
     <script src="libs/header-attrs-2.7/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/metropolis-fonts.css" rel="stylesheet" />
@@ -16,12 +16,15 @@
     <script>window.xaringanExtraClipboard(null, {"button":"<i class=\"fa fa-clipboard\"><\/i>","success":"<i class=\"fa fa-check\" style=\"color: #90BE6D\"><\/i>","error":"Press Ctrl+C to Copy"})</script>
     <link href="libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
     <link href="libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
+    <link href="libs/tile-view-0.2.6/tile-view.css" rel="stylesheet" />
+    <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link rel="stylesheet" href="css/wolfpack.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
 
 class: title-slide, inverse, center, top
+
 
 
 
@@ -38,7 +41,7 @@ background-size: 25%, 20%, 20%
 &lt;br/&gt;
 ### North Carolina State University
 ### WestEd\*
-### March 23, 2021
+### March 24, 2021
 
 ---
 
@@ -147,9 +150,16 @@ class: clear
 
 background-image: url(img/animation1.png)
 background-size: cover
+background-position: center
+
+--
+
+background-image: url(img/custom-narrative-blocks.png), url(img/animation1.png)
+background-size: 50%, cover
+background-position: 90% 20%, center
 
 ---
-#Results
+# Results
 .font130[Our team .red[**qualitatively coded the transcribed audio**] from the think-aloud environment experimentation and the focus group interview questions using .red[**three overarching themes**] aligned to our research questions:]
 &lt;br/&gt;&lt;br/&gt;&lt;br/&gt;
 --
@@ -252,8 +262,6 @@ class: inverse, middle, center, clear
 .pull-left[&lt;img src="img/Teacher1and2_Blocks2.png" width="100%"/&gt; ]
 .pull-right[&lt;img src="img/Teacher1and2_Animation2.png" width="100%"/&gt;]
 
-
-
 ---
 
 # Content Integration
@@ -279,12 +287,12 @@ class: inverse, middle, center, clear
 # Conclusions and Recommendations
 &lt;br/&gt;
 .font130[
-- Our narrative-centered offers .red[**great potential for engaging ELA, science, and CT learning**]
+- Our narrative-centered digital learning environment offers .red[**great potential for engaging ELA, science, and CT learning**]
 
-- We are iteratively refining with .red[**additional navigation and instructional supports**] as we garner feedback from teachers and students
+- We are iteratively refining the environment with .red[**additional navigation and instructional supports**] as we garner feedback from teachers and students
  - .red[**Science Content Explorer**] application
  
- - Design .red[**PD around CT concepts**] and how to teach them to students through the .red[**affordances of InfuseCS**] 
+ - Design .red[**PD around CT concepts**] and how to teach them to students through the .red[**affordances of our learning environment**] 
 ]
 ---
 
